# gnostr

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  GNUmakefile  README.md  build.boost.sh  build.cmake.sh  build.rs  build.widgets.sh  build.wt.sh  cargo.mk  clean.mk  docker.mk  gnostr-bot.mk  gnostr-bot.yml  gnostr.c  gnostr.js  gnostr.mk  index.html  package.json  requirements.txt  tests.mk
.github/workflows/: ghcr.io.yml  gnostr-alpine.yml  gnostr-bot.yml  gnostr-docker.yml  gnostr.yml  pre-release.yml  release.yml
.gnostr/snapshots/: gnostr-2064-826060-451927-1705366392-fe77b001-c4616865-gnostr-bits-v0.0.0.patch.torrent
desktop/: CMakeLists.txt
doc/: gnostr-act.1  gnostr-bits.1  gnostr-blockheight.1  gnostr-cat.1  gnostr-cli.1  gnostr-client.1  gnostr-db-cli.1  gnostr-db.1  gnostr-get-relays-c.1  gnostr-get-relays.1  gnostr-getrelays.1  gnostr-git-log.1  gnostr-git-reflog.1  gnostr-git.1  gnostr-gnode.1  gnostr-grep.1  gnostr-keyconv.1  gnostr-modal.1  gnostr-nip.1  gnostr-pi.1  gnostr-post-event.1  gnostr-post.1  gnostr-proxy.1  gnostr-query.1  gnostr-relays.1  gnostr-req.1  gnostr-send.1  gnostr-set-relays.1  gnostr-sha256.1  gnostr-tests.1  gnostr-tui.1  gnostr-weeble.1  gnostr-wobble.1  gnostr.1
docs/: CNAME
ext/curl-8.5.0/: CMakeLists.txt  GNUmakefile
include/: base64.h
scripts/: nuke-docker
sources/: COMMANDS.md  HEADER.md
src/: aes.c  base64.c  gnostr-get-relays.c  gnostr-pi.c  gnostr-set-relays.c  gnostr.c  log.cc  main.rs  reflog.rs  reflog_simple.rs  sha256.c  wss_client.cc  wss_req.cc
src/nostril/: CMakeLists.txt  gnostr.c  nostri.h  openssl_hash.h
template/: gnostr-blockheight  gnostr-commit  gnostr-docker  gnostr-e  gnostr-functions  gnostr-get-relays  gnostr-git-log  gnostr-git-reflog  gnostr-git-send  gnostr-git-show  gnostr-hexidrome  gnostr-init  gnostr-keyconv  gnostr-nip  gnostr-npub  gnostr-post  gnostr-proxy  gnostr-proxy-relay-list  gnostr-proxy-test  gnostr-query  gnostr-relays  gnostr-send  gnostr-set-relays  gnostr-snapshot  gnostr-weeble  gnostr-xor  xor.sh
test/: first-gnostr-commit.json  first-gnostr-commit2.txt  gnostr_sha256_test.cc  gnostr_test.cc  list_01.txt  tests.cc
web/: .env  .gitignore  .gitmodules  .relays  CNAME  GNUmakefile  README.md  gnostr-act.mk  gnostr-web-deploy  home.cc  home.hh  process-args.js  venv.mk  view.mk  web.cc
web/.github/workflows/: gnostr-alpine.yml  gnostr.yml  pre-release.yml  release.yml  static.yml
web/public/: app.js
