[package]
name = "gnostr"
version = "0.0.1"
edition = "2021"
authors = ["gnostr <admin@gnostr.org>","extrawurst <mail@rusticorn.com>", "TODO:add more contributors"]
description = "gnostr: a git+nostr workflow utility"
rust-version = "1.65"
exclude = [".github/*", ".vscode/*", "assets/*"]
homepage = "https://github.com/gnostr-org/gnostr"
repository = "https://github.com/gnostr-org/gnostr"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["git", "gui", "cli", "terminal", "ui", "gnostr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gnostr-bins = { git = "https://github.com/gnostr-org/gnostr-bins.git", version = "0.0.6" }
# gnostr-cli = { git = "https://github.com/gnostr-org/gnostr-cli.git", rev = "60e244cffdcd781f1a22c2c67f31bb3d539624f2" }
k256 = { version = "0.13.3", features = ["schnorr", "ecdh"], path = "vendor/k256" }
rand_core = "0.6"

inline-c = "0.1.7"
sha2 = { version = "0.10.8", path = "vendor/sha2" }
